--- a/src/packages/event-sequence-timer-plugin/package.json
+++ b/src/packages/event-sequence-timer-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "event-sequence-timer-plugin",
+    "name": "@posthog/event-sequence-timer-plugin",
     "version": "0.0.1",
     "description": "Time the time taken for a user to perform Event B after performing Event A.",
     "main": "index.js",
